Created jar file. Added instruction to execute it in readme.md