@@ -1,3 +1,7 @@
+Pokemon Tracker
+@Version: 1.0
+@Authors: Jade Torres, Jordan Tran, Hasan Salhi
+
 IMPORTANT: Follow these steps before running the program in IntelliJ.
 ---
 Add the JavaFX SDK as a library to the Project
@@ -11,3 +15,10 @@ Afterward, to run the program itself you must go to the TrackerController.java r
 
 Change it so --module-path leads to where you have the Java SDK library installed on your computer.
 You should be able to run the program after doing this. 
+
+---
+Hasan Salhi
+To open it via jar:
+
+Open terminal in directory where jar file is stored
+Enter 'java --module-path "C:\Location of javafx library" --add-modules javafx.controls,javafx.fxml -jar cpsc233w25project.jar'
